tests/negative/typecheck/addrof_type.orng
// addrof_type.orng:7:19: error: expected a type
//     type X = &four
//                  ^
// 
fn main() -> Int {
    const four = 4
    type X = &four
    0
}